# sim_read_until

./: .dockerignore  .gitignore  .gitmodules  .markdownlint.json  DeveloperNotes.md  Dockerfile  LICENSE  README.md  all-documents.html  classIndex.html  fullsearchindex.json  index.html  moduleIndex.html  nameIndex.html  objects.inv  pyproject.toml  searchindex.json  simreaduntil.html  simreaduntil.seqsum_tools.coverage_tracker.BasepairCoverageTracker.html  simreaduntil.seqsum_tools.coverage_tracker.BlockwiseCoverageTracker.html  simreaduntil.seqsum_tools.coverage_tracker.NanoSimCoverageTracker.html  simreaduntil.seqsum_tools.coverage_tracker.PafCoverageTracker.html  simreaduntil.seqsum_tools.coverage_tracker.html  simreaduntil.seqsum_tools.html  simreaduntil.seqsum_tools.mux_scan_detection.html  simreaduntil.seqsum_tools.seqsum_plotting.html  simreaduntil.seqsum_tools.seqsum_preprocessing.html  simreaduntil.shared_utils.debugging_helpers.html  simreaduntil.shared_utils.dna.html  simreaduntil.shared_utils.html  simreaduntil.shared_utils.logging_utils.html  simreaduntil.shared_utils.merge_axes.html  simreaduntil.shared_utils.nanosim_parsing.NanoSimId.html  simreaduntil.shared_utils.nanosim_parsing.html  simreaduntil.shared_utils.numerics.html  simreaduntil.shared_utils.plotting.html  simreaduntil.shared_utils.profiling.ProfilingEnabled.html  simreaduntil.shared_utils.profiling.html  simreaduntil.shared_utils.tee_stdouterr.TeeStdouterr.Writer.html  simreaduntil.shared_utils.tee_stdouterr.TeeStdouterr.html  (+92 more)
.github/workflows/: build_doc.yml  build_docker.yml  publish_pypi.unyml  run_tox.yml
src/simreaduntil/: __init__.py
src/simreaduntil/seqsum_tools/: __init__.py  coverage_tracker.py  mux_scan_detection.py  seqsum_plotting.py  seqsum_preprocessing.py
src/simreaduntil/shared_utils/: .gitignore  README.md  __init__.py  debugging_helpers.py  dna.py  logging_utils.py  merge_axes.py  nanosim_parsing.py  numerics.py  plotting.py  profiling.py  tee_stdouterr.py  testing_utils.py  thread_helpers.py  timing.py  utils.py
src/simreaduntil/simulator/: README.md  __init__.py  channel.py  channel_element.py  channel_stats.py  pore_model.py  readpool.py  readswriter.py  simfasta_to_seqsum.py  simulator.py  simulator_client.py  simulator_params.py  simulator_server.py  utils.py
src/simreaduntil/usecase_helpers/: README.md  __init__.py  readfish_plotting.py  readfish_wrappers.py  simulator_with_readfish.py  utils.py
tests/: conftest.py
tests/seqsum_tools/: test_coverage_tracker.py  test_mux_scan_detection.py  test_seqsum_plotting.py  test_seqsum_preprocessing.py
tests/seqsum_tools/data/: README.md  sim_sequencing_summary.txt  zymo_short_seqsum.txt
tests/shared_utils/: test_dna.py  test_logging_utils.py  test_nanosim_parsing.py  test_numerics.py  test_testing_utils.py  test_threadhelpers.py  test_timing.py  test_utils.py
tests/simulator/: conftest.py  test_channel.py  test_channel_element.py  test_channel_stats.py  test_pore_model.py  test_readpool.py  test_readswriter.py  test_sim_params.py  test_simfasta_to_seqsum.py  test_simulator.py  test_simulator_client.py  test_simulator_server.py  test_utils.py
tests/simulator/data/: README.md  dummy_pore_model.csv
tests/simulator/gap_sampling/: test_constant_gaps_until_blocked.py  test_gap_sampler_per_window_until_blocked.py  test_gap_sampling.py  test_inactive_active_gaps_replication.py
tests/usecase_helpers/: test_readfish_wrappers.py  test_run_simulator_with_readfish.py  test_utils.py
usecases/: README.md  analyze_readfish_outputs.ipynb  compare_replication_methods.ipynb  compute_absolute_enrichment.ipynb  create_nanosim_reads.ipynb  enrich_usecase.py  enrich_usecase_submission.sh  gen_example_sim_plot.py  generate_nanosim_reads.sh  install_usecase_deps.sh  plot_existing_seqsum.py  plot_existing_seqsum_submission.sh  prepare_small_refgenome.ipynb  replicate_run.py  replicate_run_submission.sh
(+65 files in other folders)
